# hophop

./: Cargo.toml  README.md  test.sh
.github/workflows/: buildtest.yml
doc/: dect-firmware.md  external.md  hardware.md  options.md  peculiarities.md  reference-projects.md
examples/: .gitignore  Cargo.toml  README.md  laze-project.yml  show-ping.py  show-rssi.py
examples/.cargo/: config.toml
examples/.media/: REUSE.toml
examples/src/: dect.rs  lib.rs
examples/src/dect/: latency.rs  mod.rs  rssi.rs
hophop/: Cargo.toml
hophop/src/: lib.rs
hophop/src/nrfxlib_phy/: error.rs  latency.rs  mod.rs  rssi.rs  rx.rs
ts-103-636-numbers/: Cargo.toml  README.md
ts-103-636-numbers/src/: endpoint_multiplexing.rs  lib.rs  mac_ie.rs  mac_pdu.rs
ts-103-636-utils/: Cargo.toml  README.md  clippy.toml
ts-103-636-utils/src/: lib.rs  mac_ie.rs  mac_pdu.rs
