# SPDX-FileCopyrightText: Copyright Christian Amsüss <chrysn@fsfe.org>, Silano Systems
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "3"
members = [
    "hophop",
    "ts-103-636-numbers",
    "ts-103-636-utils",
]

# Not part of the workspace because that doesn't work well with Ariel OS setups (?)
exclude = ["examples"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/ariel-os/hophop/"
keywords = ["dect", "nr+"]
categories = ["no-std::no-alloc"]

[patch.crates-io]
# nrf-modem: https://github.com/diondokter/nrf-modem/pull/53, branch = "dect-examples"
nrf-modem = { git = "https://github.com/chrysn-pull-requests/nrf-modem", rev = "20f79536753be06a3516ce0ad3099245d8912aca" }

[workspace.metadata.release]
sign-tag = true
