# SPDX-FileCopyrightText: Copyright Christian Amsüss <chrysn@fsfe.org>, Silano Systems
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "hophop"
description = "Exploring DECT-2020 NR+"
version = "0.0.1"
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
heapless = { version = "0.9.2", features = ["embedded-io-v0.7"] }

embassy-sync = "0.7.2"
defmt = "1"

nrf-modem = { version = "*", features = ["dect", "nrf9151"] }
ts-103-636-numbers = { path = "../ts-103-636-numbers/", features = ["defmt"] }
ts-103-636-utils = { path = "../ts-103-636-utils/", features = ["defmt"] }
