# SPDX-FileCopyrightText: Copyright Christian Amsüss <chrysn@fsfe.org>, Silano Systems
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ts-103-636-numbers"
description = "Constants from and around ETSI TS 103-636 'DECT-2020 New Radio (NR)'"
documentation = "https://docs.rs/ts-103-636-numbers/"
version = "0.0.1"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]
