[package]
name = "ts-103-636-utils"
version = "0.0.1"
edition = "2024"

description = "Protocol decoding and encoding utilities for ETSI TS 103-636 'DECT-2020 New Radio (NR)'"
documentation = "https://docs.rs/ts-103-636-utils/"
repository = "https://github.com/ariel-os/hophop/"
keywords = ["dect", "nr+"]
categories = ["no-std::no-alloc"]
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-io = "0.7.1"
ts-103-636-numbers = { version = "0.0.1", path = "../ts-103-636-numbers" }

[features]
defmt = ["dep:defmt", "ts-103-636-numbers/defmt"]
