# SPDX-FileCopyrightText: Copyright Christian Amsüss <chrysn@fsfe.org>, Silano Systems
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ts-103-636-utils"
description = "Protocol decoding and encoding utilities for ETSI TS 103-636 'DECT-2020 New Radio (NR)'"
documentation = "https://docs.rs/ts-103-636-utils/"
version = "0.0.1"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-io = "0.7.1"
ts-103-636-numbers = { version = "0.0.1", path = "../ts-103-636-numbers" }

[features]
defmt = ["dep:defmt", "ts-103-636-numbers/defmt"]
